@@ -54,6 +54,7 @@ export(make_inverseSurv)
 export(minBranchLength)
 export(multiDiv)
 export(nearestNeighborDist)
+export(occData2timeList)
 export(optimPaleo)
 export(parInit)
 export(parLower)
